fix: table edges where outside of the visible area

--- a/Resources/Private/Backend/Templates/Dashboard/Index.html
+++ b/Resources/Private/Backend/Templates/Dashboard/Index.html
@@ -15,7 +15,7 @@
 <f:section name="Content">
     <f:flashMessages/>
 
-    <div class="row">
+    <div>
         <table class="table table-striped table-hover">
             <thead>
             <tr>
