--- a/Resources/Private/Backend/Layouts/Default.html
+++ b/Resources/Private/Backend/Layouts/Default.html
@@ -1,8 +1,10 @@
-<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true" lang="en">
+
 <f:be.container pageTitle="{f:translate(key: '{localizationFile}:mlang_labels_tablabel')}"
-                includeCssFiles="{0: '{f:uri.resource(path: \'Css/FalQuotaBackend.css\')}'}">
-    <f:flashMessages />
-    <f:render section="Header" />
-    <f:render section="Content" />
-</f:be.container>
+                includeCssFiles="{0: '{f:uri.resource(path: \'Css/FalQuotaBackend.css\')}'}" />
+
+<f:flashMessages />
+<f:render section="Header" />
+<f:render section="Content" />
+
 </html>
