--- a/Resources/Private/Backend/Templates/Dashboard/Index.html
+++ b/Resources/Private/Backend/Templates/Dashboard/Index.html
@@ -1,10 +1,7 @@
-<html
-    xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
-    xmlns:core="http://typo3.org/ns/TYPO3/CMS/Core/ViewHelpers"
-    xmlns:be="http://typo3.org/ns/TYPO3/CMS/Backend/ViewHelpers"
-    data-namespace-typo3-fluid="true">
+<html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true" lang="en">
 
-<f:layout name="Default"/>
+<f:layout name="Default" />
+
 
 <f:section name="Header">
     <h1>
@@ -13,8 +10,7 @@
 </f:section>
 
 <f:section name="Content">
-    <f:flashMessages/>
-
+    <f:flashMessages />
     <div>
         <table class="table table-striped table-hover">
             <thead>
@@ -33,7 +29,7 @@
             </thead>
             <tbody>
             <f:for as="storage" each="{storages}">
-                <f:render partial="Dashboard/StorageRow" arguments="{_all}"/>
+                <f:render partial="Dashboard/StorageRow" arguments="{_all}" />
             </f:for>
             </tbody>
         </table>
@@ -46,6 +42,7 @@
             const elements = context.querySelectorAll(selector);
             return Array.prototype.slice.call(elements);
         }
+
         // Create the Pie Elements (SVG and Circle)
         function createElements(pie, additionalClass = '') {
             const p = parseFloat(pie.textContent);
@@ -70,12 +67,13 @@
             svg.appendChild(circle);
             pie.appendChild(svg);
         }
+
         // Iterate all storage elements
-        $$('.pie').forEach(function(pie) {
+        $$('.pie').forEach(function (pie) {
             createElements(pie);
         });
         // Iterate all storage elements w/ exceeded quota threshold
-        $$('.pie-exceeded-quota').forEach(function(pie) {
+        $$('.pie-exceeded-quota').forEach(function (pie) {
             createElements(pie, 'exceeded-quota');
         });
     </script>
