--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -1,6 +1,6 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true" lang="en">
 
-<f:be.container pageTitle="{f:translate(key: '{localizationFile}:mlang_labels_tablabel')}"
+<f:be.pageRenderer pageTitle="{f:translate(key: '{localizationFile}:mlang_labels_tablabel')}"
                 includeCssFiles="{0: '{f:uri.resource(path: \'Css/FalQuotaBackend.css\')}'}" />
 
 <f:flashMessages />
