--- a/Resources/Public/Css/FalQuotaBackend.css
+++ b/Resources/Public/Css/FalQuotaBackend.css
@@ -8,34 +8,36 @@ td.col-center {
   text-align: center;
 }
 
-.pie,
-.pie-exceeded-quota {
-  width: 50px;
-  height: 50px;
-  display: inline-block;
-  margin: 10px;
-  transform: rotate(-90deg);
+.pie-chart {
+  line-height: 1;
 }
 
-svg {
+.pie {
+  width: 50px;
+  height: 70px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.pie svg {
   background: #ededed;
   border-radius: 50%;
   border: 1px solid #c6c6c6;
+  transform: rotate(-90deg);
 }
 
-circle {
+@keyframes grow { from { stroke-dasharray: 0 100 } }
+
+.pie circle {
+  animation: grow 2s 1 linear;
   fill: #ededed;
   stroke: #a5cb50;
   stroke-width: 32;
   border: 1px solid #c6c6c6;
 }
 
-circle.exceeded-quota {
+.pie.exceeded-quota circle {
   stroke: #c83333;
-}
-
-@keyframes grow { to { stroke-dasharray: 50 50 } }
-
-.pie.animated circle {
-  animation: grow 2s infinite linear;
 }
